--- a/About_Me.html
+++ b/About_Me.html
@@ -27,7 +27,7 @@
   <div class="section-center">
       <img src="img/43_person.jpg.webp" alt="">
       <h1 class="mb-0">Hi, I'm Mohamad! </h1>
-      <h3>22 years old software developer. Born in Syria and living in the Netherlans since 2015. <br> I work as a teamlieder in a convenience store named ALDI.</h3>
+      <h3>22 years old software developer who lives in Den Bosch. Also a student at SintLucas in Eindhoven.<br> I am Working as a managerassistant in a supermarket. I have moved to the Netherlands since 2016.</h3>
       <div class="center">
         <div id="social-test">
           <h2>My Socials</h2>
