--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         }
         </style>
 </head>
+<body style="overflow: hidden;">
 <SCRIPT LANGUAGE="JavaScript">
     //Hide from older browsers 
     if (document.getElementById&&!document.layers){
@@ -222,7 +223,7 @@
     }
     //-->
     </script>
-    
+
 <a href="index.html" class="logo">
     <img src="img/Logo.png" alt="">
 </a>
@@ -240,9 +241,9 @@
 
   <div class="section-center">
       <h1 class="mb-0">Welcome to my website!</h1>
-      
+      <button><a href="About_Me.html" style="text-decoration: none;"><h2>About Me</h2></a></button>
   </div>
-<body style="overflow: hidden;">
+
    
 </body>
 </html>
