--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         }
         </style>
 </head>
-<body style="overflow: hidden;">
+<body class="body" style="overflow: hidden;">
 <SCRIPT LANGUAGE="JavaScript">
     //Hide from older browsers 
     if (document.getElementById&&!document.layers){
@@ -243,7 +243,7 @@
       <h1 class="mb-0">Welcome to my website!</h1>
       <button><a href="About_Me.html" style="text-decoration: none;"><h2>About Me</h2></a></button>
   </div>
+ 
 
-   
 </body>
 </html>
