--- a/About_Me.html
+++ b/About_Me.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MO SR</title>
 </head>
-<body style="width: auto;">
+<body class="body" style="width: auto;">
 <a href="index.html" class="logo">
     <img src="img/Logo.png" alt="">
 </a>
