--- a/My_Work.html
+++ b/My_Work.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="htmlMyWork" lang="en">
 <head>
     <link rel="stylesheet" href="css/style.css">
     <script src="js/js.Index.js"></script> 
