--- a/My_Work.html
+++ b/My_Work.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="htmlMyWork" lang="en">
 <head>
-    <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.css">
     <script src="js/js.Index.js"></script> 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -20,8 +20,8 @@
   <nav class="nav"> 		
       <ul class="pt-5">
           <li><a href="index.html">Home</a></li>
-          <li><a href="My_Work.html">Work</a></li>
-          <li><a href="About_Me.html">About me</a></li>
+          <li><a href="my_work.html">Work</a></li>
+          <li><a href="Pages/about_me.html">About me</a></li>
           <li><a href="#">Contact</a></li>
       </ul>
   </nav>
@@ -31,7 +31,7 @@
 
         <div class="grid-block">
           <div class="tile">
-            <a class="tile-link" href="#">
+            <a class="tile-link" href="Pages/my_first_website.html">
               <img class="tile-img tile-img1" src="img/Website.jpg" alt="Image">
             </a>
           </div>
