--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/js.Index.js"></script> 
+    <script src="/js/js.Index.js"></script> 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -233,8 +233,8 @@
   <nav class="nav"> 		
       <ul class="pt-5">
             <li><a href="index.html">Home</a></li>
-            <li><a href="My_Work.html">Work</a></li>
-            <li><a href="About_Me.html">About me</a></li>
+            <li><a href="my_work.html">Work</a></li>
+            <li><a href="Pages/about_me.html">About me</a></li>
             <li><a href="#">Contact</a></li>
       </ul>
   </nav>
