--- a/About_Me.html
+++ b/About_Me.html
@@ -18,8 +18,8 @@
   <nav class="nav"> 		
       <ul class="pt-5">
           <li><a href="index.html">Home</a></li>
-          <li><a href="My_Work.html">Work</a></li>
-          <li><a href="About_Me.html">About me</a></li>
+          <li><a href="my_work.html">Work</a></li>
+          <li><a href="about_me.html">About me</a></li>
           <li><a href="#">Contact</a></li>
       </ul>
   </nav>
