--- a/Pages/my_first_website.html
+++ b/Pages/my_first_website.html
@@ -7,6 +7,6 @@
     <title>First Website</title>
 </head>
 <body>
-    <iframe src="mohamadAlSamour.github.io/Projects/first%20website/index.html" height="1000" width="1100" title="Iframe Example"></iframe> 
+    <iframe src="Projects/first website/index.html" height="1000" width="1100" title="Iframe Example"></iframe> 
 </body>
 </html>
