--- a/Pages/my_first_website.html
+++ b/Pages/my_first_website.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>First Website</title>
 </head>
 <body>
-    <iframe src="file:///C:/Users/malsa/OneDrive/Documents/GitHub/mohamadAlSamour.github.io/Projects/first%20website/index.html" height="1000" width="1100" title="Iframe Example"></iframe> 
+    <h1> My First Website:</h1>
+    <br>
+    <div class="embed-responsive embed-responsive-16by9">
+        <iframe class="embed-responsive-item" src="file:///C:/Users/malsa/OneDrive/Documents/GitHub/mohamadAlSamour.github.io/Projects/first%20website/index.html" allowfullscreen></iframe>
+      </div>
+<br>
+      
+
+   
 </body>
 </html>
