--- a/Pages/my_first_website.html
+++ b/Pages/my_first_website.html
@@ -11,7 +11,7 @@
     <h1> My First Website:</h1>
     <br>
     <div class="embed-responsive embed-responsive-16by9">
-        <iframe class="embed-responsive-item" src="file:///C:/Users/malsa/OneDrive/Documents/GitHub/mohamadAlSamour.github.io/Projects/first%20website/index.html" allowfullscreen></iframe>
+        <iframe class="embed-responsive-item" src="/Projects/first website/index.html" allowfullscreen></iframe>
       </div>
 <br>
       
