--- a/My_Work.html
+++ b/My_Work.html
@@ -39,7 +39,7 @@
       
         <div class="grid-block">
           <div class="tile">
-            <a class="tile-link" href="#">
+            <a class="tile-link" href="/Pages/arcade_project.html">
               <img class="tile-img tile-img2" src="img/Arcade.jpg" alt="Image">
             </a>
           </div>
