--- a/Pages/my_first_website.html
+++ b/Pages/my_first_website.html
@@ -1,21 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <title>First Website</title>
+    <title>MO SR</title>
 </head>
-<body>
-    <h1> My First Website:</h1>
+<body class="body" style="width: auto;">
+<a href="/index.html" class="logo">
+    <img src="/img/Logo.png" alt="s">
+</a>
+  <input class="menu-icon" type="checkbox" id="menu-icon" name="menu-icon"/>
+  <label for="menu-icon"></label>
+  <nav class="nav"> 		
+      <ul class="pt-5">
+          <li><a href="/index.html">Home</a></li>
+          <li><a href="/my_work.html">Work</a></li>
+          <li><a href="/about_me.html">About me</a></li>
+          <li><a href="#">Contact</a></li>
+      </ul>
+  </nav>
+
+  <div class="section-center">
+    <h1 class="mb-0">My First Website:</h1>
     <br>
-    <div class="embed-responsive embed-responsive-16by9">
+    <br>
+    <br>
+    <br>
+    <div class="embed-responsive embed-responsive-21by9" style="margin-top: 35px;">
         <iframe class="embed-responsive-item" src="/Projects/first website/index.html" allowfullscreen></iframe>
       </div>
-<br>
-      
-
-   
+</div>
 </body>
 </html>
