--- a/My_Work.html
+++ b/My_Work.html
@@ -21,7 +21,7 @@
       <ul class="pt-5">
           <li><a href="index.html">Home</a></li>
           <li><a href="my_work.html">Work</a></li>
-          <li><a href="Pages/about_me.html">About me</a></li>
+          <li><a href="about_me.html">About me</a></li>
           <li><a href="#">Contact</a></li>
       </ul>
   </nav>
