--- a/Pages/my_first_website.html
+++ b/Pages/my_first_website.html
@@ -25,13 +25,14 @@
 
   <div class="section-center">
     <h1 class="mb-0">My First Website:</h1>
+    <h2>Some text...</h2>
     <br>
     <br>
     <br>
     <br>
-    <div class="embed-responsive embed-responsive-21by9" style="margin-top: 35px;">
-        <iframe class="embed-responsive-item" src="/Projects/first website/index.html" allowfullscreen></iframe>
-      </div>
 </div>
+<div class="embed-responsive embed-responsive-21by9" style="margin-top: 35px;">
+    <iframe class="embed-responsive-item" src="/Projects/first website/index.html" allowfullscreen></iframe>
+  </div>
 </body>
 </html>
