--- a/Pages/my_first_website.html
+++ b/Pages/my_first_website.html
@@ -23,14 +23,13 @@
       </ul>
   </nav>
 
-  <div class="section-center">
+
+  <div style="margin: 10%;">
     <h1 class="mb-0">My First Website:</h1>
-    <h2>Some text...</h2>
     <br>
-    <br>
-    <br>
-    <br>
+    <h2>In this project I developed a website in HTML. This is where i started to love HTML.  I made a website that contains a little information about me. </h2>
 </div>
+
 <div class="embed-responsive embed-responsive-21by9" style="margin-top: 35px;">
     <iframe class="embed-responsive-item" src="/Projects/first website/index.html" allowfullscreen></iframe>
   </div>
