--- a/Pages/my_first_website.html
+++ b/Pages/my_first_website.html
@@ -17,12 +17,11 @@
   <nav class="nav"> 		
       <ul class="pt-5">
           <li><a href="/index.html">Home</a></li>
-          <li><a href="/my_work.html">Work</a></li>
-          <li><a href="/about_me.html">About me</a></li>
+          <li><a href="/My_Work.html">Work</a></li>
+          <li><a href="/About_Me.html">About me</a></li>
           <li><a href="#">Contact</a></li>
       </ul>
   </nav>
-
 
   <div style="margin: 10%;">
     <h1 class="mb-0">My First Website:</h1>
