--- a/Pages/my_first_website.html
+++ b/Pages/my_first_website.html
@@ -10,7 +10,7 @@
 </head>
 <body class="body" style="width: auto;">
 <a href="/index.html" class="logo">
-    <img src="/img/Logo.png" alt="ss">
+    <img src="/img/Logo.png" alt="">
 </a>
   <input class="menu-icon" type="checkbox" id="menu-icon" name="menu-icon"/>
   <label for="menu-icon"></label>
