--- a/Pages/arcade_project.html
+++ b/Pages/arcade_project.html
@@ -1,27 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <title>First Website</title>
+    <title>MO SR</title>
 </head>
-<body>
-    <h1> My Arcade project:</h1>
+<body class="body" style="width: auto;">
+<a href="/index.html" class="logo">
+    <img src="/img/Logo.png" alt="">
+</a>
+  <input class="menu-icon" type="checkbox" id="menu-icon" name="menu-icon"/>
+  <label for="menu-icon"></label>
+  <nav class="nav"> 		
+      <ul class="pt-5">
+          <li><a href="/index.html">Home</a></li>
+          <li><a href="/My_Work.html">Work</a></li>
+          <li><a href="/About_Me.html">About me</a></li>
+          <li><a href="#">Contact</a></li>
+      </ul>
+  </nav>
+
+  <div style="margin: 10%;">
+    <h1 class="mb-0">Arcade project:</h1>
     <br>
+    <h2>In this project I developed a website in HTML. This is where i started to love HTML.  I made a website that contains a little information about me. </h2>
+</div>
 
-      <div style="align-items: center;">
-        <object class="embed-responsive-item">
-          <video autoplay loop >
-            <source src="/Projects/Arcade/2022-02-01 19-45-47.mp4"/>
-          </video>
-        </object>
-      </div>
-     
-<br>
-      
+<div class="embed-responsive embed-responsive-21by9">
+  <iframe class="embed-responsive-item" src="https://youtu.be/-HDfnFANFz0"></iframe>
+</div>
 
-   
+
+
 </body>
 </html>
