--- a/Pages/arcade_project.html
+++ b/Pages/arcade_project.html
@@ -26,11 +26,13 @@
   <div style="margin: 10%;">
     <h1 class="mb-0">Arcade project:</h1>
     <br>
-    <h2>In this project I developed a website in HTML. This is where i started to love HTML.  I made a website that contains a little information about me. </h2>
+    <h2>In this project i developed a competitive game in unity with DDM students from my school. It was a game that can be played on the arcade. </h2>
 </div>
 
 <div class="embed-responsive embed-responsive-21by9">
-  <iframe class="embed-responsive-item" src="https://youtu.be/-HDfnFANFz0"></iframe>
+  <video width="320" height="240" controls>
+    <source src="/Projects/Arcade/Arcade project.mp4" type="mp4">
+  </video>
 </div>
 
 
