--- a/Pages/arcade_project.html
+++ b/Pages/arcade_project.html
@@ -29,11 +29,10 @@
     <h2>In this project i developed a competitive game in unity with DDM students from my school. It was a game that can be played on the arcade. </h2>
 </div>
 
-<div class="embed-responsive embed-responsive-21by9">
-  <video width="320" height="240" controls>
-    <source src="/Projects/Arcade/Arcade project.mp4" type="mp4">
-  </video>
-</div>
+  <div class="embed-responsive embed-responsive-16by9">
+    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/-HDfnFANFz0 "></iframe>
+  </div>
+
 
 
 
