--- a/My_Work.html
+++ b/My_Work.html
@@ -25,7 +25,7 @@
           <li><a href="#">Contact</a></li>
       </ul>
   </nav>
-
+  
 
     <div class="grid image-grid">
 
@@ -47,7 +47,7 @@
       
         <div class="grid-block">
           <div class="tile">
-            <a class="tile-link" href="#">
+            <a class="tile-link" href="Pages/data_visualisation_en.html">
               <img class="tile-img tile-img3" src="img/DataVisualisation.png" alt="Image">
             </a>
           </div>
@@ -61,6 +61,7 @@
           </div>
         </div>
 
+        
         <div class="grid-block">
             <div class="tile">
               <a class="tile-link" href="#">
