--- a/About_Me.html
+++ b/About_Me.html
@@ -25,7 +25,7 @@
   </nav>
 
   <div class="section-center">
-      <img src="img/43_person.jpg.webp" alt="">
+      <img src="img/43_person.jpg.webp" style="padding-top: 250px;" alt="">
       <h1 class="mb-0">Hi, I'm Mohamad! </h1>
       <h3>22 years old software developer who lives in Den Bosch. Also a student at SintLucas in Eindhoven.<br> I am Working as a managerassistant in a supermarket. I have moved to the Netherlands since 2016.</h3>
       <div class="center">
