--- a/Pages/2D_platformer.html
+++ b/Pages/2D_platformer.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
+    <title>2D Platformer</title>
 </head>
 <body class="body" style="width: auto;">
 <a href="/index.html" class="logo">
@@ -24,13 +24,17 @@
   </nav>
 
   <div style="margin: 10%;">
-    <h1 class="mb-0">My First Website:</h1>
+    <h1 class="mb-0">2D Platformer</h1>
     <br>
-    <h2>In this project I developed a website in HTML. This is where i started to love HTML.  I made a website that contains a little information about me. </h2>
+    <h2>In this project I developed a 2D game in unity using c#. I learned too many things here like player get hit points, how player can win / lose, how player can move etc. </h2>
 </div>
 
-<div class="embed-responsive embed-responsive-21by9" style="margin-top: 35px;">
-    <iframe class="embed-responsive-item" src="/Projects/first website/index.html" allowfullscreen></iframe>
+  <div class="embed-responsive embed-responsive-16by9">
+    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/N8JtPBrRelU "></iframe>
   </div>
+
+
+
+
 </body>
 </html>
