--- a/My_Work.html
+++ b/My_Work.html
@@ -25,7 +25,7 @@
           <li><a href="#">Contact</a></li>
       </ul>
   </nav>
-  
+
 
     <div class="grid image-grid">
 
@@ -55,7 +55,7 @@
       
         <div class="grid-block">
           <div class="tile">
-            <a class="tile-link" href="#">
+            <a class="tile-link" href="Pages/2D_platformer.html">
               <img class="tile-img tile-img4" src="img/Unity.webp" alt="Image">
             </a>
           </div>
@@ -64,7 +64,7 @@
         
         <div class="grid-block">
             <div class="tile">
-              <a class="tile-link" href="#">
+              <a class="tile-link" href="Pages/todo_app.html">
                 <img class="tile-img tile-img5" src="img/ToDo.png" alt="Image">
               </a>
             </div>
