--- a/Pages/todo_app.html
+++ b/Pages/todo_app.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
+    <title>ToDo app</title>
 </head>
 <body class="body" style="width: auto;">
 <a href="/index.html" class="logo">
@@ -24,13 +24,13 @@
   </nav>
 
   <div style="margin: 10%;">
-    <h1 class="mb-0">My First Website:</h1>
+    <h1 class="mb-0">ToDo App:</h1>
     <br>
-    <h2>In this project I developed a website in HTML. This is where i started to love HTML.  I made a website that contains a little information about me. </h2>
+    <h2>In this project I developed an application in HTML and MySQL. I have learned to create a basic to do list and stored it in the localdata service. </h2>
 </div>
 
 <div class="embed-responsive embed-responsive-21by9" style="margin-top: 35px;">
-    <iframe class="embed-responsive-item" src="/Projects/first website/index.html" allowfullscreen></iframe>
+    <iframe class="embed-responsive-item" src="/Projects/ToDo App/index.html" allowfullscreen></iframe>
   </div>
 </body>
 </html>
