--- a/About_Me.html
+++ b/About_Me.html
@@ -9,23 +9,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MO SR</title>
 </head>
+
 <body class="body" style="width: auto;">
-<a href="index.html" class="logo">
-    <img src="img/Logo.png" alt="">
-</a>
-  <input class="menu-icon" type="checkbox" id="menu-icon" name="menu-icon"/>
-  <label for="menu-icon"></label>
-  <nav class="nav"> 		
-      <ul class="pt-5">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="My_Work.html">Work</a></li>
-          <li><a href="About_Me.html">About me</a></li>
-          <li><a href="#">Contact</a></li>
-      </ul>
-  </nav>
+  
+        <a href="index.html" class="logo">
+            <img src="img/Logo.png" alt="">
+        </a>
+          <input class="menu-icon" type="checkbox" id="menu-icon" name="menu-icon"/>
+          <label for="menu-icon"></label>
+          <nav class="nav"> 		
+              <ul class="pt-5">
+                  <li><a href="index.html">Home</a></li>
+                  <li><a href="My_Work.html">Work</a></li>
+                  <li><a href="About_Me.html">About me</a></li>
+                  <li><a href="#">Contact</a></li>
+              </ul>
+          </nav>
 
   <div class="section-center">
-      <img src="img/43_person.jpg.webp" style="padding-top: 250px;" alt="">
+    
+      <img src="img/43_person.jpg.webp" alt="">
+      <div class="size">
       <h1 class="mb-0">Hi, I'm Mohamad! </h1>
       <h3>22 years old software developer who lives in Den Bosch. Also a student at SintLucas in Eindhoven.<br> I am Working as a managerassistant in a supermarket. I have moved to the Netherlands since 2016.</h3>
       <div class="center">
@@ -39,6 +43,7 @@
       
         </ul>
         </div>
+      </div>
           </div>
   </div>
 </body>
