--- a/My_Work.html
+++ b/My_Work.html
@@ -27,6 +27,8 @@
   </nav>
 
 
+  <div>
+
     <div class="grid image-grid">
 
         <div class="grid-block">
@@ -72,6 +74,8 @@
         
         
       </div>
+
+  
 
 </body>
 </html>
