--- a/Pages/2D_platformer.html
+++ b/Pages/2D_platformer.html
@@ -16,9 +16,9 @@
   <label for="menu-icon"></label>
   <nav class="nav"> 		
       <ul class="pt-5">
-          <li><a href="/index.html">Home</a></li>
-          <li><a href="/My_Work.html">Work</a></li>
-          <li><a href="/About_Me.html">About me</a></li>
+          <li><a href="../index.html">Home</a></li>
+          <li><a href="../My_Work.html">Work</a></li>
+          <li><a href="../About_Me.html">About me</a></li>
           <li><a href="#">Contact</a></li>
       </ul>
   </nav>
