--- a/Pages/indexNL.html
+++ b/Pages/indexNL.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <script src="/js/js.Index.js"></script> 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -33,7 +33,7 @@
         }
         </style>
 </head>
-<body class="body" style="overflow: hidden;">
+<body class="body"  style="overflow: hidden;">
 <SCRIPT LANGUAGE="JavaScript">
     //Hide from older browsers 
     if (document.getElementById&&!document.layers){
@@ -230,36 +230,36 @@
     //-->
     </script>
 
-<a href="index.html" class="logo">
-    <img src="img/Logo.png" alt="">
+<a href="indexNL.html" class="logo">
+    <img src="../img/Logo.png" alt="">
 </a>
 <div class="dropdown">
     <button type="button" class="btn btn-primary dropdown-toggle" style="background-color: red; position: fixed;" data-toggle="dropdown">
-      Language
+      Taal
     </button>
     <div class="dropdown-menu">
-      <a class="dropdown-item" href="index.html" style="color:rgb(228, 248, 255); background-color: red;">EN</a>
-      <a class="dropdown-item" href="Pages/indexNL.html">NL</a>
+      <a class="dropdown-item" href="../index.html">EN</a>
+      <a class="dropdown-item" href="indexNL.html" style="color:rgb(228, 248, 255); background-color: red;">NL</a>
     </div>
   </div>
-
 
   <input class="menu-icon" type="checkbox" id="menu-icon" name="menu-icon"/>
   <label for="menu-icon"></label>
   <nav class="nav"> 		
       <ul class="pt-5">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="Pages/My_Work.html">Work</a></li>
-            <li><a href="Pages/About_Me.html">About me</a></li>
+            <li><a href="indexNL.html">Home</a></li>
+            <li><a href="My_Work_Nl.html">Werk</a></li>
+            <li><a href="About_Me_NL.html">Over mij</a></li>
             <li><a href="#">Contact</a></li>
      
       </ul>
   </nav>
 
-  <div class="section-center">
-      <h1 class="mb-0">Welcome to my website!</h1>
+ <div class="section-center">
+      <h1 class="mb-0">Welkom in mijn website!</h1>
       <br>
-      <button><a href="Pages/About_Me.html" style="text-decoration: none;"><h2 style="font-size: 4vh;">About Me</h2></a></button>
+
+      <button><a href="Pages/About_Me.html" style="text-decoration: none;"><h2 style="font-size: 4vh;">Over mij</h2></a></button>
   </div>
  
   
