--- a/Pages/my_first_website_nl.html
+++ b/Pages/my_first_website_nl.html
@@ -13,34 +13,34 @@
     <title>My Website</title>
 </head>
 <body class="body" style="width: auto;">
-<a href="../index.html" class="logo">
+<a href="indexNL.html" class="logo">
     <img src="../img/Logo.png" alt="">
 </a>
   <input class="menu-icon" type="checkbox" id="menu-icon" name="menu-icon"/>
   <label for="menu-icon"></label>
   <nav class="nav"> 		
       <ul class="pt-5">
-          <li><a href="../index.html">Home</a></li>
-          <li><a href="My_Work.html">Work</a></li>
-          <li><a href="About_Me.html">About me</a></li>
+          <li><a href="indexNL.html">Home</a></li>
+          <li><a href="My_Work_Nl.html">Werk</a></li>
+          <li><a href="About_Me_NL.html">Over mij</a></li>
           <li><a href="#">Contact</a></li>
       </ul>
   </nav>
 
   <div class="dropdown">
     <button type="button" class="btn btn-primary dropdown-toggle" style="background-color: red; position: fixed;" data-toggle="dropdown">
-      Language
+      Taal
     </button>
     <div class="dropdown-menu">
-      <a class="dropdown-item" href="my_first_website.html" style="color:rgb(228, 248, 255); background-color: red;">EN</a>
-      <a class="dropdown-item" href="my_first_website_nl.html">NL</a>
+      <a class="dropdown-item" href="my_first_website.html">EN</a>
+      <a class="dropdown-item" href="my_first_website_nl.html" style="color:rgb(228, 248, 255); background-color: red;">NL</a>
     </div>
   </div>
 
   <div style="margin: 10%;">
-    <h1 class="mb-0">My First Website:</h1>
+    <h1 class="mb-0">Mijn eerste website:</h1>
     <br>
-    <h2>In this project I developed a website in HTML. This is where i started to love HTML.  I made a website that contains a little information about me. </h2>
+    <h2> In dit project heb ik een website ontwikkeld in HTML. Hier is waar ik begonnen was om HTML leuk te vinden. Ik heb toen een simple website gemaakt die informatie over mij bevat.</h2>
 </div>
 
 <div class="embed-responsive embed-responsive-21by9" style="margin-top: 35px;">
