--- a/Pages/todo_app.html
+++ b/Pages/todo_app.html
@@ -1,36 +1,52 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ToDo app</title>
 </head>
-<body class="body" style="width: auto;">
-<a href="/index.html" class="logo">
-    <img src="/img/Logo.png" alt="">
+<body class="body">
+<a href="../index.html" class="logo">
+    <img src="../img/Logo.png" alt="">
 </a>
   <input class="menu-icon" type="checkbox" id="menu-icon" name="menu-icon"/>
   <label for="menu-icon"></label>
   <nav class="nav"> 		
       <ul class="pt-5">
           <li><a href="../index.html">Home</a></li>
-          <li><a href="../My_Work.html">Work</a></li>
-          <li><a href="../About_Me.html">About me</a></li>
+          <li><a href="My_Work.html">Work</a></li>
+          <li><a href="About_Me.html">About me</a></li>
           <li><a href="#">Contact</a></li>
       </ul>
   </nav>
 
-  <div style="margin: 10%;">
+  
+<div class="dropdown">
+    <button type="button" class="btn btn-primary dropdown-toggle" style="background-color: red; position: fixed;" data-toggle="dropdown">
+      Language
+    </button>
+    <div class="dropdown-menu">
+      <a class="dropdown-item" href="todo_app.html" style="color:rgb(228, 248, 255); background-color: red;">EN</a>
+      <a class="dropdown-item" href="My_Work_Nl.html">NL</a>
+    </div>
+  </div>
+  
+
+  <div style="margin: 10%; margin-top: 15%;">
     <h1 class="mb-0">ToDo App:</h1>
     <br>
     <h2>In this project I developed an application in HTML and MySQL. I have learned to create a basic to do list and stored it in the localdata service. </h2>
 </div>
 
 <div class="embed-responsive embed-responsive-21by9" style="margin-top: 35px;">
-    <iframe class="embed-responsive-item" src="/Projects/ToDo App/index.html" allowfullscreen></iframe>
+    <iframe class="embed-responsive-item" src="../Projects/ToDo App/index.html" allowfullscreen></iframe>
   </div>
 </body>
 </html>
