--- a/Pages/data_visualisation_nl.html
+++ b/Pages/data_visualisation_nl.html
@@ -12,35 +12,35 @@
     <title>Data Visualisation</title>
 </head>
 <body class="body" style="width: auto;">
-<a href="../index.html" class="logo">
+<a href="indexNL.html" class="logo">
     <img src="../img/Logo.png" alt="">
 </a>
 
 <div class="dropdown">
-  <button type="button" class="btn btn-primary dropdown-toggle" style="background-color: red; position: fixed;" data-toggle="dropdown">
-    Language
-  </button>
-  <div class="dropdown-menu">
-    <a class="dropdown-item" href="data_visualisation_en.html" style="color:rgb(228, 248, 255); background-color: red;">EN</a>
-    <a class="dropdown-item" href="data_visualisation_nl.html">NL</a>
+    <button type="button" class="btn btn-primary dropdown-toggle" style="background-color: red; position: fixed;" data-toggle="dropdown">
+      Taal
+    </button>
+    <div class="dropdown-menu">
+      <a class="dropdown-item" href="data_visualisation_en.html">EN</a>
+      <a class="dropdown-item" href="data_visualisation_nl.html" style="color:rgb(228, 248, 255); background-color: red;">NL</a>
+    </div>
   </div>
-</div>
 
   <input class="menu-icon" type="checkbox" id="menu-icon" name="menu-icon"/>
   <label for="menu-icon"></label>
   <nav class="nav"> 		
       <ul class="pt-5">
-          <li><a href="../index.html">Home</a></li>
-          <li><a href="My_Work.html">Work</a></li>
-          <li><a href="About_Me.html">About me</a></li>
+          <li><a href="indexNL.html">Home</a></li>
+          <li><a href="my_first_website_nl.html">Werk</a></li>
+          <li><a href="About_Me_NL.html">Over mij</a></li>
           <li><a href="#">Contact</a></li>
       </ul>
   </nav>
 
   <div style="margin: 10%;">
-    <h1 class="mb-0">Data Visualisation:</h1>
+    <h1 class="mb-0">Data Visualisatie</h1>
     <br>
-    <h2>I have developed an app that reads data from csv file to show the housing market in specific province </h2>
+    <h2>Ik heb een app ontwikkeld die gegevens uit het csv-bestand leest om de woningmarkt in een specifieke provincie te laten zien.</h2>
 </div>
 
   <div class="embed-responsive embed-responsive-16by9">
