--- a/Pages/indexNL.html
+++ b/Pages/indexNL.html
@@ -259,7 +259,7 @@
       <h1 class="mb-0">Welkom in mijn website!</h1>
       <br>
 
-      <button><a href="Pages/About_Me.html" style="text-decoration: none;"><h2 style="font-size: 4vh;">Over mij</h2></a></button>
+      <button><a href="About_Me_NL.html" style="text-decoration: none;"><h2 style="font-size: 4vh;">Over mij</h2></a></button>
   </div>
  
   
