--- a/Pages/todo_app_nl.html
+++ b/Pages/todo_app_nl.html
@@ -42,7 +42,7 @@
   <div style="margin: 10%; margin-top: 15%;">
     <h1 class="mb-0">ToDo App:</h1>
     <br>
-    <h2>In dit project heb ik een applicatie in HTML en MySQL ontwikkeld.//////////////////////////////// </h2>
+    <h2>in dit project heb ik een applicatie ontwikkeld in HTML en MySQL. Ik heb geleerd hoe ik een basis takenlijst kan aan maken en deze kan opslaan in de localdata-service. </h2>
 </div>
 
 <div class="embed-responsive embed-responsive-21by9" style="margin-top: 35px;">
