--- a/Pages/2D_platformer_nl.html
+++ b/Pages/2D_platformer_nl.html
@@ -12,36 +12,36 @@
     <title>2D Platformer</title>
 </head>
 <body class="body" style="width: auto;">
-<a href="../index.html" class="logo">
+<a href="indexNL.html" class="logo">
     <img src="../img/Logo.png" alt="">
 </a>
 
-  
 <div class="dropdown">
-  <button type="button" class="btn btn-primary dropdown-toggle" style="background-color: red; position: fixed;" data-toggle="dropdown">
-    Language
-  </button>
-  <div class="dropdown-menu">
-    <a class="dropdown-item" href="2D_platformer.html" style="color:rgb(228, 248, 255); background-color: red;">EN</a>
-    <a class="dropdown-item" href="2D_platformer_nl.html">NL</a>
+    <button type="button" class="btn btn-primary dropdown-toggle" style="background-color: red; position: fixed;" data-toggle="dropdown">
+      Taal
+    </button>
+    <div class="dropdown-menu">
+      <a class="dropdown-item" href="2D_platformer.html">EN</a>
+      <a class="dropdown-item" href="arcade_project_nl.html" style="color:rgb(228, 248, 255); background-color: red;">NL</a>
+    </div>
   </div>
-</div>
+
 
   <input class="menu-icon" type="checkbox" id="menu-icon" name="menu-icon"/>
   <label for="menu-icon"></label>
   <nav class="nav"> 		
       <ul class="pt-5">
-          <li><a href="../index.html">Home</a></li>
-          <li><a href="My_Work.html">Work</a></li>
-          <li><a href="About_Me.html">About me</a></li>
-          <li><a href="#">Contact</a></li>
+        <li><a href="indexNL.html">Home</a></li>
+        <li><a href="my_first_website_nl.html">Werk</a></li>
+        <li><a href="About_Me_NL.html">Over mij</a></li>
+        <li><a href="#">Contact</a></li>
       </ul>
   </nav>
 
   <div style="margin: 10%;">
     <h1 class="mb-0">2D Platformer</h1>
     <br>
-    <h2>In this project I developed a 2D game in unity using c#. I learned too many things here like player get hit points, how player can win / lose, how player can move etc. </h2>
+    <h2>In dit project heb ik een 2D-game in unity ontwikkeld met behulp van c#. Ik heb hier te veel dingen geleerd, zoals spelers die hitpoints krijgen, hoe een speler kan winnen / verliezen, hoe een speler kan bewegen...</h2>
 </div>
 
   <div class="embed-responsive embed-responsive-16by9">
