--- a/Pages/arcade_project.html
+++ b/Pages/arcade_project.html
@@ -2,23 +2,37 @@
 <html>
 <head>
   <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MO SR</title>
 </head>
 <body class="body" style="width: auto;">
-<a href="/index.html" class="logo">
-    <img src="/img/Logo.png" alt="">
+<a href="../index.html" class="logo">
+    <img src="../img/Logo.png" alt="">
 </a>
+
+<div class="dropdown">
+  <button type="button" class="btn btn-primary dropdown-toggle" style="background-color: red; position: fixed;" data-toggle="dropdown">
+    Language
+  </button>
+  <div class="dropdown-menu">
+    <a class="dropdown-item" href="arcade_project.html" style="color:rgb(228, 248, 255); background-color: red;">EN</a>
+    <a class="dropdown-item" href="arcade_project_nl.html">NL</a>
+  </div>
+</div>
+
   <input class="menu-icon" type="checkbox" id="menu-icon" name="menu-icon"/>
   <label for="menu-icon"></label>
   <nav class="nav"> 		
       <ul class="pt-5">
           <li><a href="../index.html">Home</a></li>
-          <li><a href="../My_Work.html">Work</a></li>
-          <li><a href="../About_Me.html">About me</a></li>
+          <li><a href="My_Work.html">Work</a></li>
+          <li><a href="About_Me.html">About me</a></li>
           <li><a href="#">Contact</a></li>
       </ul>
   </nav>
