--- a/Pages/indexNL.html
+++ b/Pages/indexNL.html
@@ -250,7 +250,7 @@
             <li><a href="indexNL.html">Home</a></li>
             <li><a href="My_Work_Nl.html">Werk</a></li>
             <li><a href="About_Me_NL.html">Over mij</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="Contact_nl.html">Contact</a></li>
      
       </ul>
   </nav>
