--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="Pages/My_Work.html">Work</a></li>
             <li><a href="Pages/About_Me.html">About me</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="Pages/Contact.html">Contact</a></li>
      
       </ul>
   </nav>
