--- a/Pages/About_Me_NL.html
+++ b/Pages/About_Me_NL.html
@@ -30,7 +30,7 @@
                   <li><a href="indexNL.html">Home</a></li>
                   <li><a href="My_Work_Nl.html">Werk</a></li>
                   <li><a href="About_Me_NL.html">Over mij</a></li>
-                  <li><a href="#">Contact</a></li>
+                  <li><a href="Contact_nl.html">Contact</a></li>
               </ul>
           </nav>
 
@@ -40,8 +40,8 @@
               Taal
             </button>
             <div class="dropdown-menu">
-              <a class="dropdown-item" href="About_Me.html" style="color:rgb(228, 248, 255); background-color: red;">EN</a>
-              <a class="dropdown-item" href="About_Me_NL.html">NL</a>
+              <a class="dropdown-item" href="About_Me.html">EN</a>
+              <a class="dropdown-item" href="About_Me_NL.html" style="color:rgb(228, 248, 255); background-color: red;">NL</a>
             </div>
           </div>
 
