--- a/Pages/My_Work.html
+++ b/Pages/My_Work.html
@@ -37,7 +37,7 @@
           <li><a href="../index.html">Home</a></li>
           <li><a href="My_Work.html">Work</a></li>
           <li><a href="About_Me.html">About me</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="Contact.html">Contact</a></li>
       </ul>
   </nav>
 
