--- a/Pages/My_Work_Nl.html
+++ b/Pages/My_Work_Nl.html
@@ -37,7 +37,7 @@
           <li><a href="../index.html">Home</a></li>
           <li><a href="My_Work.html">Werk</a></li>
           <li><a href="About_Me.html">Over mij</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="Contact_nl.html">Contact</a></li>
       </ul>
   </nav>
 
