--- a/Pages/About_Me_NL.html
+++ b/Pages/About_Me_NL.html
@@ -15,7 +15,7 @@
 </head>
 
 <body class="body">
-  
+  <div class="Header">
 
 
     <a href="indexNL.html" class="logo">
@@ -44,9 +44,9 @@
               <a class="dropdown-item" href="About_Me_NL.html" style="color:rgb(228, 248, 255); background-color: red;">NL</a>
             </div>
           </div>
+        </div>
 
-
-  <div class="section-center" style="position:static;">
+  <div class="section-center" style="position:static; padding-top: 30vh;">
     
     <img src="../img/43_person.jpg.webp" alt="">
       <h1 class="mb-0">Hi, ik ben Mohamad! </h1>
