--- a/Pages/My_Work.html
+++ b/Pages/My_Work.html
@@ -14,7 +14,9 @@
     <title>MO SR</title>
 
 </head>
-<body class="bodyMyWork" style="width: auto;">
+<body class="bodyMyWork">
+
+  <div class="header-my-work">
 
 <a href="../index.html" class="logo">
     <img src="../img/Logo.png" alt="">
@@ -40,7 +42,7 @@
           <li><a href="Contact.html">Contact</a></li>
       </ul>
   </nav>
-
+</div>
 
   <div class="grid image-grid">
 
