--- a/Pages/data_visualisation_en.html
+++ b/Pages/data_visualisation_en.html
@@ -11,7 +11,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Data Visualisation</title>
 </head>
+
+
 <body class="body" style="width: auto;">
+
+  <div class="Header"></div>
 <a href="../index.html" class="logo">
     <img src="../img/Logo.png" alt="">
 </a>
@@ -33,14 +37,14 @@
           <li><a href="../index.html">Home</a></li>
           <li><a href="My_Work.html">Work</a></li>
           <li><a href="About_Me.html">About me</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="Contact.html">Contact</a></li>
       </ul>
   </nav>
 
-  <div style="margin: 10%;">
-    <h1 class="mb-0">Data Visualisation:</h1>
+  <div style="margin-top: 25vh;">
+    <h1 class="mb-0" style="font-size: 9vh;">Data Visualisation:</h1>
     <br>
-    <h2>I have developed an app that reads data from csv file to show the housing market in specific province </h2>
+    <h2 style="font-size: 5vh;">I have developed an app that reads data from csv file to show the housing market in specific province </h2>
 </div>
 
   <div class="embed-responsive embed-responsive-16by9">
