--- a/Pages/my_first_website_nl.html
+++ b/Pages/my_first_website_nl.html
@@ -12,7 +12,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Website</title>
 </head>
+
 <body class="body" style="width: auto;">
+  <div class="Header"></div>
 <a href="indexNL.html" class="logo">
     <img src="../img/Logo.png" alt="">
 </a>
@@ -23,7 +25,7 @@
           <li><a href="indexNL.html">Home</a></li>
           <li><a href="My_Work_Nl.html">Werk</a></li>
           <li><a href="About_Me_NL.html">Over mij</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="Contact_nl.html">Contact</a></li>
       </ul>
   </nav>
 
@@ -37,10 +39,10 @@
     </div>
   </div>
 
-  <div style="margin: 10%;">
-    <h1 class="mb-0">Mijn eerste website:</h1>
+  <div style="margin-top: 25vh;">
+    <h1 class="mb-0" style="font-size: 9vh;">Mijn eerste website:</h1>
     <br>
-    <h2> In dit project heb ik een website ontwikkeld in HTML. Hier is waar ik begonnen was om HTML leuk te vinden. Ik heb toen een simple website gemaakt die informatie over mij bevat.</h2>
+    <h2 style="font-size: 5vh;"> In dit project heb ik een website ontwikkeld in HTML. Hier is waar ik begonnen was om HTML leuk te vinden. Ik heb toen een simple website gemaakt die informatie over mij bevat.</h2>
 </div>
 
 <div class="embed-responsive embed-responsive-21by9" style="margin-top: 35px;">
