--- a/Pages/todo_app.html
+++ b/Pages/todo_app.html
@@ -12,7 +12,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ToDo app</title>
 </head>
+
+
 <body class="body">
+  <div class="Header"></div>
+
+  
 <a href="../index.html" class="logo">
     <img src="../img/Logo.png" alt="">
 </a>
@@ -23,7 +28,7 @@
           <li><a href="../index.html">Home</a></li>
           <li><a href="My_Work.html">Work</a></li>
           <li><a href="About_Me.html">About me</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="Contact.html">Contact</a></li>
       </ul>
   </nav>
 
@@ -34,15 +39,15 @@
     </button>
     <div class="dropdown-menu">
       <a class="dropdown-item" href="todo_app.html" style="color:rgb(228, 248, 255); background-color: red;">EN</a>
-      <a class="dropdown-item" href="My_Work_Nl.html">NL</a>
+      <a class="dropdown-item" href="todo_app_nl.html">NL</a>
     </div>
   </div>
   
 
-  <div style="margin: 10%; margin-top: 15%;">
-    <h1 class="mb-0">ToDo App:</h1>
+  <div style="margin-top: 25vh;">
+    <h1 class="mb-0" style="font-size: 9vh;">ToDo App:</h1>
     <br>
-    <h2>In this project I developed an application in HTML and MySQL. I have learned to create a basic to do list and stored it in the localdata service. </h2>
+    <h2 style="font-size: 5vh;">In this project I developed an application in HTML and MySQL. I have learned to create a basic to do list and stored it in the localdata service. </h2>
 </div>
 
 <div class="embed-responsive embed-responsive-21by9" style="margin-top: 35px;">
