--- a/Pages/2D_platformer.html
+++ b/Pages/2D_platformer.html
@@ -11,7 +11,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>2D Platformer</title>
 </head>
+
+
 <body class="body" style="width: auto;">
+  <div class="Header"></div>
 <a href="../index.html" class="logo">
     <img src="../img/Logo.png" alt="">
 </a>
@@ -34,14 +37,14 @@
           <li><a href="../index.html">Home</a></li>
           <li><a href="My_Work.html">Work</a></li>
           <li><a href="About_Me.html">About me</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="Contact.html">Contact</a></li>
       </ul>
   </nav>
 
-  <div style="margin: 10%;">
-    <h1 class="mb-0">2D Platformer</h1>
+  <div style="margin-top:25vh ;">
+    <h1 class="mb-0" style="font-size: 9vh;">2D Platformer</h1>
     <br>
-    <h2>In this project I developed a 2D game in unity using c#. I learned too many things here like player get hit points, how player can win / lose, how player can move etc. </h2>
+    <h2 style="font-size: 5vh;">In this project I developed a 2D game in unity using c#. I learned too many things here like player get hit points, how player can win / lose, how player can move etc. </h2>
 </div>
 
   <div class="embed-responsive embed-responsive-16by9">
