--- a/Pages/2D_platformer_nl.html
+++ b/Pages/2D_platformer_nl.html
@@ -11,7 +11,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>2D Platformer</title>
 </head>
+
+
+
 <body class="body" style="width: auto;">
+
+  <div class="Header"></div>
 <a href="indexNL.html" class="logo">
     <img src="../img/Logo.png" alt="">
 </a>
@@ -22,7 +27,7 @@
     </button>
     <div class="dropdown-menu">
       <a class="dropdown-item" href="2D_platformer.html">EN</a>
-      <a class="dropdown-item" href="arcade_project_nl.html" style="color:rgb(228, 248, 255); background-color: red;">NL</a>
+      <a class="dropdown-item" href="2D_platformer_nl.html" style="color:rgb(228, 248, 255); background-color: red;">NL</a>
     </div>
   </div>
 
@@ -32,16 +37,16 @@
   <nav class="nav"> 		
       <ul class="pt-5">
         <li><a href="indexNL.html">Home</a></li>
-        <li><a href="my_first_website_nl.html">Werk</a></li>
+        <li><a href="My_Work_Nl.html">Werk</a></li>
         <li><a href="About_Me_NL.html">Over mij</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="Contact_nl.html">Contact</a></li>
       </ul>
   </nav>
 
-  <div style="margin: 10%;">
-    <h1 class="mb-0">2D Platformer</h1>
+  <div style="margin-top: 25vh;">
+    <h1 class="mb-0" style="font-size: 9vh;">2D Platformer</h1>
     <br>
-    <h2>In dit project heb ik een 2D-game in unity ontwikkeld met behulp van c#. Ik heb hier te veel dingen geleerd, zoals spelers die hitpoints krijgen, hoe een speler kan winnen / verliezen, hoe een speler kan bewegen...</h2>
+    <h2 style="font-size: 5vh;">In dit project heb ik een 2D-game in unity ontwikkeld met behulp van c#. Ik heb hier te veel dingen geleerd, zoals spelers die hitpoints krijgen, hoe een speler kan winnen / verliezen, hoe een speler kan bewegen...</h2>
 </div>
 
   <div class="embed-responsive embed-responsive-16by9">
