--- a/Pages/About_Me.html
+++ b/Pages/About_Me.html
@@ -16,7 +16,7 @@
 
 <body class="body">
   
-
+  <div class="Header">
 
     <a href="../index.html" class="logo">
       <img src="../img/Logo.png" alt="">
@@ -45,8 +45,9 @@
             </div>
           </div>
 
+        </div>
 
-  <div class="section-center" style="position:static;">
+  <div class="section-center" style="position:static; padding-top: 30vh;">
     
     <img src="../img/43_person.jpg.webp" alt="">
       <h1 class="mb-0">Hi, I'm Mohamad! </h1>
