--- a/Pages/Contact.html
+++ b/Pages/Contact.html
@@ -48,7 +48,7 @@
 		<div class="container-contact100">
 			<div class="wrap-contact100">
 				<div class="contact100-pic js-tilt" data-tilt>
-					<img src="../img/Logo.png" alt="IMG">
+					<a href="../index.html"><img src="../img/Logo.png" alt="IMG"></a>
 				</div>
 
 				<form class="contact100-form validate-form">
