--- a/Pages/My_Work_Nl.html
+++ b/Pages/My_Work_Nl.html
@@ -14,8 +14,9 @@
     <title>MO SR</title>
 
 </head>
-<body class="bodyMyWork" style="width: auto;">
+<body class="bodyMyWork">
 
+  <div class="header-my-work">
 <a href="indexNL.html" class="logo">
     <img src="../img/Logo.png" alt="">
 </a>
@@ -40,7 +41,7 @@
           <li><a href="Contact_nl.html">Contact</a></li>
       </ul>
   </nav>
-
+</div>
 
   <div>
 
