--- a/Pages/data_visualisation_nl.html
+++ b/Pages/data_visualisation_nl.html
@@ -11,7 +11,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Data Visualisation</title>
 </head>
+
+
 <body class="body" style="width: auto;">
+
+  <div class="Header"></div>
 <a href="indexNL.html" class="logo">
     <img src="../img/Logo.png" alt="">
 </a>
@@ -31,16 +35,16 @@
   <nav class="nav"> 		
       <ul class="pt-5">
           <li><a href="indexNL.html">Home</a></li>
-          <li><a href="my_first_website_nl.html">Werk</a></li>
+          <li><a href="My_Work_Nl.html">Werk</a></li>
           <li><a href="About_Me_NL.html">Over mij</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="Contact_nl.html">Contact</a></li>
       </ul>
   </nav>
 
-  <div style="margin: 10%;">
-    <h1 class="mb-0">Data Visualisatie</h1>
+  <div style="margin-top: 25vh;">
+    <h1 class="mb-0" style="font-size: 9vh;">Data Visualisatie</h1>
     <br>
-    <h2>Ik heb een app ontwikkeld die gegevens uit het csv-bestand leest om de woningmarkt in een specifieke provincie te laten zien.</h2>
+    <h2 style="font-size: 5vh;">Ik heb een app ontwikkeld die gegevens uit het csv-bestand leest om de woningmarkt in een specifieke provincie te laten zien.</h2>
 </div>
 
   <div class="embed-responsive embed-responsive-16by9">
