--- a/Pages/my_first_website.html
+++ b/Pages/my_first_website.html
@@ -12,7 +12,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Website</title>
 </head>
+
+
 <body class="body" style="width: auto;">
+
+  <div class="Header"></div>
 <a href="../index.html" class="logo">
     <img src="../img/Logo.png" alt="">
 </a>
@@ -23,7 +27,7 @@
           <li><a href="../index.html">Home</a></li>
           <li><a href="My_Work.html">Work</a></li>
           <li><a href="About_Me.html">About me</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="Contact.html">Contact</a></li>
       </ul>
   </nav>
 
@@ -37,10 +41,10 @@
     </div>
   </div>
 
-  <div style="margin: 10%;">
-    <h1 class="mb-0">My First Website:</h1>
+  <div style="margin-top: 25vh;">
+    <h1 class="mb-0" style="font-size: 9vh;">My First Website:</h1>
     <br>
-    <h2>In this project I developed a website in HTML. This is where i started to love HTML.  I made a website that contains a little information about me. </h2>
+    <h2 style="font-size: 5vh;">In this project I developed a website in HTML. This is where i started to love HTML.  I made a website that contains a little information about me. </h2>
 </div>
 
 <div class="embed-responsive embed-responsive-21by9" style="margin-top: 35px;">
