--- a/Pages/todo_app_nl.html
+++ b/Pages/todo_app_nl.html
@@ -12,7 +12,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ToDo app</title>
 </head>
+
+
 <body class="body">
+  <div class="Header"></div>
+
+
 <a href="indexNL.html" class="logo">
     <img src="../img/Logo.png" alt="">
 </a>
@@ -23,7 +28,7 @@
           <li><a href="indexNL.html">Home</a></li>
           <li><a href="My_Work_Nl.html">Werk</a></li>
           <li><a href="About_Me_NL.html">Over mij</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="Contact_nl.html">Contact</a></li>
       </ul>
   </nav>
 
@@ -39,10 +44,10 @@
   </div>
   
 
-  <div style="margin: 10%; margin-top: 15%;">
-    <h1 class="mb-0">ToDo App:</h1>
+  <div style="margin-top: 25vh;">
+    <h1 class="mb-0" style="font-size: 9vh;">ToDo App:</h1>
     <br>
-    <h2>in dit project heb ik een applicatie ontwikkeld in HTML en MySQL. Ik heb geleerd hoe ik een basis takenlijst kan aan maken en deze kan opslaan in de localdata-service. </h2>
+    <h2 style="font-size: 5vh;">In dit project heb ik een applicatie ontwikkeld in HTML en MySQL. Ik heb geleerd hoe ik een basis takenlijst kan aan maken en deze kan opslaan in de localdata-service. </h2>
 </div>
 
 <div class="embed-responsive embed-responsive-21by9" style="margin-top: 35px;">
