--- a/Pages/About_Me.html
+++ b/Pages/About_Me.html
@@ -50,12 +50,12 @@
   <div class="section-center" style="position:static; padding-top: 30vh;">
     
     <img src="../img/43_person.jpg.webp" alt="">
-      <h1 class="mb-0">Hi, I'm Mohamad! </h1>
-      <h3>22 years old software developer who lives in Den Bosch. Also a student at SintLucas in Eindhoven.<br> I am Working as a managerassistant in a supermarket. I have moved to the Netherlands since 2016.</h3>
+      <h1 class="mb-0" style="font-size: 9vh;">Hi, I'm Mohamad! </h1>
+      <h3 style="font-size: 5vh;">22 years old software developer who lives in Den Bosch. Also a student at SintLucas in Eindhoven.<br> I am Working as a managerassistant in a supermarket. I have moved to the Netherlands since 2016.</h3>
       <div class="center">
         <div id="social-test">
           <br>
-          <h2>My Socials</h2>
+          <h2 style="font-size: 7vh;">My Socials</h2>
         <ul class="social">
          <a href="https://www.facebook.com/m.sa.damascus0" target="_blank" ><li><i class="fa fa-facebook" aria-hidden="true"></i></li></a>
         </li>
