--- a/Pages/About_Me_NL.html
+++ b/Pages/About_Me_NL.html
@@ -49,12 +49,12 @@
   <div class="section-center" style="position:static; padding-top: 30vh;">
     
     <img src="../img/43_person.jpg.webp" alt="">
-      <h1 class="mb-0">Hi, ik ben Mohamad! </h1>
-      <h3>22 jarige software Ontwikkelaar die in Den Bosch leeft. Ook een student op SintLucas in Eindhoven.<br> Ik werk als een  managerassistant in een supermarket. Ik ben naar Nederland verhuisd sinds 2016.</h3>
+      <h1 class="mb-0" style="font-size: 9vh;">Hi, ik ben Mohamad! </h1>
+      <h3 style="font-size: 5vh;">22 jarige software Ontwikkelaar die in Den Bosch leeft. Ook een student op SintLucas in Eindhoven.<br> Ik werk als een  managerassistant in een supermarket. Ik ben naar Nederland verhuisd sinds 2016.</h3>
       <div class="center">
         <div id="social-test">
           <br>
-          <h2>Mijn Socials</h2>
+          <h2 style="font-size: 7vh;">Mijn Socials</h2>
         <ul class="social">
          <a href="https://www.facebook.com/m.sa.damascus0" target="_blank" ><li><i class="fa fa-facebook" aria-hidden="true"></i></li></a>
         </li>
