--- a/Pages/About_Me.html
+++ b/Pages/About_Me.html
@@ -11,7 +11,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MO SR</title>
+    <title>About me</title>
 </head>
 
 <body class="body">
@@ -51,7 +51,7 @@
     
     <img src="../img/43_person.jpg.webp" alt="">
       <h1 class="mb-0" style="font-size: 9vh;">Hi, I'm Mohamad! </h1>
-      <h3 style="font-size: 5vh;">22 years old software developer who lives in Den Bosch. Also a student at SintLucas in Eindhoven.<br> I am Working as a managerassistant in a supermarket. I have moved to the Netherlands since 2016.</h3>
+      <h3 style="font-size: 5vh; margin: 1vh;">22 years old software developer who lives in Den Bosch. Also a student at SintLucas in Eindhoven.<br> I am Working as a managerassistant in a supermarket. I have moved to the Netherlands since 2016.</h3>
       <div class="center">
         <div id="social-test">
           <br>
