--- a/index.html
+++ b/index.html
@@ -257,9 +257,9 @@
   </nav>
 
   <div class="section-center">
-      <h1 class="mb-0">Welcome to my website!</h1>
-      <br>
-      <button><a href="Pages/About_Me.html" style="text-decoration: none;"><h2 style="font-size: 4vh;">About Me</h2></a></button>
+      <h1 class="mb-0" style="padding-bottom: 10vh;">Welcome to my website!</h1>
+
+      <button ><a href="Pages/About_Me.html" style="text-decoration: none;"><h2 style="font-size: 4vh;">About Me</h2></a></button>
   </div>
  
   
