--- a/Pages/About_Me_NL.html
+++ b/Pages/About_Me_NL.html
@@ -11,7 +11,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MO SR</title>
+    <title>Over mij</title>
 </head>
 
 <body class="body">
@@ -50,7 +50,7 @@
     
     <img src="../img/43_person.jpg.webp" alt="">
       <h1 class="mb-0" style="font-size: 9vh;">Hi, ik ben Mohamad! </h1>
-      <h3 style="font-size: 5vh;">22 jarige software Ontwikkelaar die in Den Bosch leeft. Ook een student op SintLucas in Eindhoven.<br> Ik werk als een  managerassistant in een supermarket. Ik ben naar Nederland verhuisd sinds 2016.</h3>
+      <h3 style="font-size: 5vh; margin: 1vh;">22 jarige software Ontwikkelaar die in Den Bosch leeft. Ook een student op SintLucas in Eindhoven.<br> Ik werk als een  managerassistant in een supermarket. Ik ben naar Nederland verhuisd sinds 2016.</h3>
       <div class="center">
         <div id="social-test">
           <br>
