--- a/Pages/My_Work_Nl.html
+++ b/Pages/My_Work_Nl.html
@@ -11,7 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MO SR</title>
+    <title>Mijn werk</title>
 
 </head>
 <body class="bodyMyWork">
