--- a/Pages/indexNL.html
+++ b/Pages/indexNL.html
@@ -256,7 +256,7 @@
   </nav>
 
  <div class="section-center">
-      <h1 class="mb-0">Welkom in mijn website!</h1>
+      <h1 class="mb-0" style="padding-bottom: 10vh;">Welkom in mijn website!</h1>
       <br>
 
       <button><a href="About_Me_NL.html" style="text-decoration: none;"><h2 style="font-size: 4vh;">Over mij</h2></a></button>
