--- a/Pages/2D_platformer_nl.html
+++ b/Pages/2D_platformer_nl.html
@@ -16,7 +16,9 @@
 
 <body class="body" style="width: auto;">
 
-  <div class="Header"></div>
+  <div class="Header">
+    <button class="button"><a  href="My_Work_Nl.html"><span> Terug</span></a></button>
+  </div>
 <a href="indexNL.html" class="logo">
     <img src="../img/Logo.png" alt="">
 </a>
