--- a/Pages/2D_platformer.html
+++ b/Pages/2D_platformer.html
@@ -49,7 +49,7 @@
     <h2 style="font-size: 5vh;">In this project I developed a 2D game in unity using c#. I learned too many things here like player get hit points, how player can win / lose, how player can move etc. </h2>
 </div>
 
-  <div class="embed-responsive embed-responsive-16by9">
+  <div class="embed-responsive embed-responsive-16by9" style="height: 80vh;">
     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/N8JtPBrRelU "></iframe>
   </div>
 
