--- a/Pages/2D_platformer_nl.html
+++ b/Pages/2D_platformer_nl.html
@@ -51,7 +51,7 @@
     <h2 style="font-size: 5vh;">In dit project heb ik een 2D-game in unity ontwikkeld met behulp van c#. Ik heb hier te veel dingen geleerd, zoals spelers die hitpoints krijgen, hoe een speler kan winnen / verliezen, hoe een speler kan bewegen...</h2>
 </div>
 
-  <div class="embed-responsive embed-responsive-16by9">
+  <div class="embed-responsive embed-responsive-16by9" style="height: 80vh;">
     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/N8JtPBrRelU "></iframe>
   </div>
 
