--- a/Pages/data_visualisation_en.html
+++ b/Pages/data_visualisation_en.html
@@ -49,7 +49,7 @@
     <h2 style="font-size: 5vh;">I have developed an app that reads data from csv file to show the housing market in specific province </h2>
 </div>
 
-  <div class="embed-responsive embed-responsive-16by9">
+  <div class="embed-responsive embed-responsive-16by9" style="height: 80vh;">
     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/cwJGYTEtt00 "></iframe>
   </div>
 
