--- a/Pages/my_first_website.html
+++ b/Pages/my_first_website.html
@@ -49,7 +49,7 @@
     <h2 style="font-size: 5vh;">In this project I developed a website in HTML. This is where i started to love HTML.  I made a website that contains a little information about me. </h2>
 </div>
 
-<div class="embed-responsive embed-responsive-21by9" style="margin-top: 35px;">
+<div class="embed-responsive embed-responsive-21by9" style="height: 80vh;">
     <iframe class="embed-responsive-item" src="../Projects/first website/index.html" allowfullscreen></iframe>
   </div>
 </body>
