--- a/Pages/my_first_website_nl.html
+++ b/Pages/my_first_website_nl.html
@@ -47,7 +47,7 @@
     <h2 style="font-size: 5vh;"> In dit project heb ik een website ontwikkeld in HTML. Hier is waar ik begonnen was om HTML leuk te vinden. Ik heb toen een simple website gemaakt die informatie over mij bevat.</h2>
 </div>
 
-<div class="embed-responsive embed-responsive-21by9" style="margin-top: 35px;">
+<div class="embed-responsive embed-responsive-21by9" style="height: 80vh;">
     <iframe class="embed-responsive-item" src="../Projects/first website/index.html" allowfullscreen></iframe>
   </div>
 </body>
