--- a/Pages/piano_madness.html
+++ b/Pages/piano_madness.html
@@ -50,7 +50,7 @@
         I learned more to work in unity. </h2>
 </div>
 
-<div class="embed-responsive embed-responsive-16by9">
+<div class="embed-responsive embed-responsive-16by9" style="height: 80vh;">
     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/uHS_rPlfw-c "></iframe>
   </div>
 
