--- a/Pages/piano_madness_nl.html
+++ b/Pages/piano_madness_nl.html
@@ -49,7 +49,7 @@
 Ik heb meer geleerd om in unity te werken.</h2>
 </div>
 
-  <div class="embed-responsive embed-responsive-16by9">
+  <div class="embed-responsive embed-responsive-16by9" style="height: 80vh;">
     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/uHS_rPlfw-c "></iframe>
   </div>
 
