--- a/Pages/todo_app.html
+++ b/Pages/todo_app.html
@@ -52,7 +52,7 @@
     <h2 style="font-size: 5vh;">In this project I developed an application in HTML and MySQL. I have learned to create a basic to do list and stored it in the localdata service. </h2>
 </div>
 
-<div class="embed-responsive embed-responsive-21by9" style="margin-top: 35px;">
+<div class="embed-responsive embed-responsive-21by9" style="height: 80vh;">
     <iframe class="embed-responsive-item" src="../Projects/ToDo App/index.html" allowfullscreen></iframe>
   </div>
 </body>
