--- a/Pages/todo_app_nl.html
+++ b/Pages/todo_app_nl.html
@@ -52,7 +52,7 @@
     <h2 style="font-size: 5vh;">In dit project heb ik een applicatie ontwikkeld in HTML en MySQL. Ik heb geleerd hoe ik een basis takenlijst kan aan maken en deze kan opslaan in de localdata-service. </h2>
 </div>
 
-<div class="embed-responsive embed-responsive-21by9" style="margin-top: 35px;">
+<div class="embed-responsive embed-responsive-21by9" style="height: 80vh;">
     <iframe class="embed-responsive-item" src="../Projects/ToDo App/index.html" allowfullscreen></iframe>
   </div>
 </body>
