--- a/Pages/data_visualisation_nl.html
+++ b/Pages/data_visualisation_nl.html
@@ -49,7 +49,7 @@
     <h2 style="font-size: 5vh;">Ik heb een app ontwikkeld die gegevens uit het csv-bestand leest om de woningmarkt in een specifieke provincie te laten zien.</h2>
 </div>
 
-  <div class="embed-responsive embed-responsive-16by9">
+  <div class="embed-responsive embed-responsive-16by9" style="height: 80vh;">
     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/cwJGYTEtt00 "></iframe>
   </div>
 
