--- a/Pages/About_Me_NL.html
+++ b/Pages/About_Me_NL.html
@@ -48,7 +48,7 @@
 
   <div class="section-center" style="position:static; padding-top: 30vh;">
     
-    <img src="../img/43_person.jpg.webp" alt="">
+    <img src="../img/WhatsApp Image 2022-03-15 at 15.38.42.jpeg" alt="">
       <h1 class="mb-0" style="font-size: 9vh;">Hi, ik ben Mohamad! </h1>
       <h3 style="font-size: 5vh; margin: 1vh;">22 jarige software Ontwikkelaar die in Den Bosch leeft. Ook een student op SintLucas in Eindhoven.<br> Ik werk als een  managerassistant in een supermarket. Ik ben naar Nederland verhuisd sinds 2016.</h3>
       <div class="center">
