--- a/Pages/About_Me.html
+++ b/Pages/About_Me.html
@@ -51,10 +51,35 @@
     
     <img src="../img/WhatsApp Image 2022-03-15 at 15.38.42.jpeg" alt="">
       <h1 class="mb-0" style="font-size: 9vh;">Hi, I'm Mohamad! </h1>
-      <h3 style="font-size: 5vh; margin: 1vh;">22 years old software developer who lives in Den Bosch. Also a student at SintLucas in Eindhoven.<br> I am Working as a managerassistant in a supermarket. I have moved to the Netherlands since 2016.</h3>
+      <h3 style="font-size: 5vh; margin: 1vh;">I am 22 years old, software developer and live in Den Bosch. Also I am a student at SintLucas in Eindhoven.<br> I am a managerassistant in a supermarket. I live in the Netherlands since 2016.</h3>
+     
       <div class="center">
         <div id="social-test">
           <br>
+          <br>
+          <h2 style="font-size: 7vh;">Mijn Skills</h2>
+          <div class="skill">
+            <div class="skills">TEAMWORK</div> 
+            <div class="skill-bar">
+            <div class="teamwork">
+              <div class="bunder1"><span>60</span></div>
+            </div>
+            </div>
+            <div class="skills">GAME DEVOPLMENT</div>
+            <div class="skill-bar">
+            <div class="game_development">
+              <div class="bunder2"><span>65</span></div>
+            </div>
+            </div>
+            <div class="skills">WEB DEVELOPMENT</div>
+            <div class="skill-bar">
+              <div class="web_development">
+                <div class="bunder"><span>75</span></div></div>
+            </div>
+            </div>
+
+            <br>
+            <br>
           <h2 style="font-size: 7vh;">My Socials</h2>
         <ul class="social">
          <a href="https://www.facebook.com/m.sa.damascus0" target="_blank" ><li><i class="fa fa-facebook" aria-hidden="true"></i></li></a>
