--- a/Pages/data_visualisation_en.html
+++ b/Pages/data_visualisation_en.html
@@ -48,7 +48,7 @@
     <br>
     <h2 style="font-size: 5vh;">I have developed an app that reads data from csv file to show the housing market in specific province </h2>
 </div>
-<button style="margin-left: 50%; margin-bottom: 10%;"><a  href="../Games/index.html"><span> PLAY</span></a></button>
+<button style="margin-left: 50%; margin-bottom: 10%;"><a  href="../Games/Datavisiualisation/index.html"><span> PLAY</span></a></button>
 
   <div class="embed-responsive embed-responsive-16by9" style="height: 80vh;">
     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/cwJGYTEtt00 "></iframe>
