--- a/Pages/pong_game.html
+++ b/Pages/pong_game.html
@@ -49,6 +49,8 @@
     <h2 style="font-size: 5vh;">In this project I developed a pong game. It was my first game which I made using unity. It wasn't that hard, but it was a lot of fun. The intention was to get acquainted with unity and see how it works.</h2>
 </div>
 
+<button style="margin-left: 50%; margin-bottom: 10%;"><a  href="../Games/Pong/index.html"><span> PLAY</span></a></button>
+
 <div class="embed-responsive embed-responsive-16by9" style="height: 80vh;">
     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/nYRCxVkLZO4 "></iframe>
   </div>
