--- a/Pages/arcade_project_nl.html
+++ b/Pages/arcade_project_nl.html
@@ -48,6 +48,9 @@
         In dit project heb ik samen met DDM-studenten van mijn school een competitief spel ontwikkeld. Het was een spel dat op de arcade gespeeld kan worden.</h2>
 </div>
 
+<button style="margin-left: 50%; margin-bottom: 10%;"><a  href="../Games/No Effort/index.html"><span> PLAY</span></a></button>
+
+
   <div class="embed-responsive embed-responsive-16by9" style="height: 80vh;">
     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/-HDfnFANFz0 "></iframe>
   </div>
