--- a/Pages/arcade_project.html
+++ b/Pages/arcade_project.html
@@ -49,7 +49,7 @@
     <h2 style="font-size: 5vh;">In this project i developed a competitive game in unity with DDM students from my school. It was a game that can be played on the arcade. </h2>
 </div>
 
-<button style="margin-left: 50%; margin-bottom: 10%;"><a  href="../Games/Pong Game/index.html"><span> PLAY</span></a></button>
+<button style="margin-left: 50%; margin-bottom: 10%;"><a  href="../Games/No Effort/index.html"><span> PLAY</span></a></button>
 
   <div class="embed-responsive embed-responsive-16by9" style="height: 80vh;">
     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/-HDfnFANFz0 "></iframe>
